syntax = "proto3";

option go_package = "./;graph_auth";

package graph_auth;

message AuthTokensRequest {
    string username = 1;
    string password = 2; 
}

message AuthTokensResponce {
    string message = 1;
}

service TokensGenerater {
    rpc GenerateAuthTokens(AuthTokensRequest) returns (AuthTokensResponce);
}
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative protos/graph_auth/graph_auth.proto