syntax = "proto3";

option go_package = "./;auth_service";

package authservice;

message HelloRequest {
    string word = 1; 
}

message HelloResponce {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponce);
}